src/tests/testfiles/binary-operators/types-17.txt
Error at 2:5: Binary operator operands must have the same type (have int and char[])
54 * "a";
^
